1、初步显示我的微博和附近人的微博

--- a/MicroBlog/Info.plist
+++ b/MicroBlog/Info.plist
@@ -36,5 +36,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>请求授权定位</string>
 </dict>
 </plist>
